<resources>
    <string name="app_name">YWCA_F22_Week1</string>
    <string name="title1">Assignment 1</string>
    <string name="calculator_app">Java Dual Mode Calculator</string>
    <string name="enter_first_number">Result Display</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>

    <string name="equals">=</string>
    <string name="clear">C</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="result_text">Result Text</string>

    <string name="value">This value for the text as string res</string>
</resources>