<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootlayout"
    >

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/title1"
        android:textSize="30sp"

        />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/Pink"
        android:gravity="center"
        android:text="@string/calculator_app"

        android:textSize="30sp" />


    <EditText
        android:id="@+id/firstnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/commonspace"
        android:autofillHints="Enter First Number"
        android:gravity="center"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:minHeight="48dp"

        />

    <EditText
        android:id="@+id/secondnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstnum"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/enter_second_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"

        />

    <LinearLayout
        android:id="@+id/bll"
        android:weightSum="5"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondnum"
        android:layout_marginTop="@dimen/commonspace"
        >

        <Button
            android:id="@+id/addbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_weight="1"
            />

        <Button
            android:layout_weight="1"
            android:id="@+id/subbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/sub"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:layout_weight="1"
            android:id="@+id/timesbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/multi"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/divbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/div"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textSize="20sp" />

<Button
    android:id="@+id/clear"
    style="?android:attr/buttonBarButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/Honeydew"
    android:layout_weight="1"
    android:text="C"
    android:textColor="@color/black"
    android:textSize="20sp"
    />
    </LinearLayout>



    <TextView
        android:id="@+id/resulttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/commonspace"
        android:hint="@string/result_text"
        android:textSize="40sp"

        />

    <Button
        android:id="@+id/showpreviousoperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/LightYellow"
        android:text="Show History"
        android:textColor="@color/black" />

</RelativeLayout>