<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/title1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Pink"
        android:gravity="center"
        android:text="@string/calculator_app"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />


    <EditText
        android:id="@+id/firstnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Enter First Number"
        android:gravity="center"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/secondnum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/secondnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_second_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/middle_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_guideline">

        <Button
            android:id="@+id/addbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/subbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/sub"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timesbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/multi"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/divbut"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Honeydew"
            android:text="@string/div"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/Honeydew"
            android:text="C"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


<!--    <Button-->
<!--        android:id="@+id/ab"-->
<!--        style="?android:attr/buttonBarButtonStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/Honeydew"-->
<!--        android:text="@string/add"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->

<!--        app:layout_constraintEnd_toStartOf="@+id/sb"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/sb"-->
<!--        style="?android:attr/buttonBarButtonStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/Honeydew"-->
<!--        android:text="@string/sub"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/tb"-->
<!--        app:layout_constraintStart_toEndOf="@+id/ab" />-->

<!--    <Button-->
<!--        app:layout_constraintHorizontal_chainStyle="packed"-->
<!--        android:id="@+id/tb"-->
<!--        style="?android:attr/buttonBarButtonStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:backgroundTint="@color/Honeydew"-->
<!--        android:text="@string/multi"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/db"-->
<!--        app:layout_constraintStart_toEndOf="@+id/sb"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/db"-->
<!--        style="?android:attr/buttonBarButtonStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/Honeydew"-->
<!--        android:text="@string/div"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/c"-->
<!--        app:layout_constraintStart_toEndOf="@+id/tb" />-->

<!--    <Button-->
<!--        android:id="@+id/c"-->
<!--        style="?android:attr/buttonBarButtonStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:backgroundTint="@color/Honeydew"-->
<!--        android:text="C"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/db" />-->


    <TextView
        android:id="@+id/resulttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/result_text"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/showpreviousoperator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toTopOf="@+id/guideline70" />

    <Button
        android:id="@+id/showpreviousoperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/LightYellow"
        android:text="Show History"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>